# netbox-vdi-billing-plugin

./: README.md  pyproject.toml
netbox_vdi_billing/: __init__.py  filtersets.py  forms.py  models.py  navigation.py  scripts.py  tables.py  template_extensions.py  urls.py  views.py
netbox_vdi_billing/api/: serializers.py  urls.py  views.py
netbox_vdi_billing/management/commands/: auto_assign_vdi.py
netbox_vdi_billing/migrations/: 0001_initial.py
netbox_vdi_billing/templates/netbox_vdi_billing/: chargeback_overview.html  chargeback_print.html  vdiassignment.html  vdibillingprofile.html
netbox_vdi_billing/templates/netbox_vdi_billing/inc/: vm_billing_panel.html
